--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
        <div class="box">
           <h3>contact us</h3>
           <p>+61 (0) 3 8376 6284</p>
-          <a href="#" class="link">ninjashub4@gmail.com</a>
+          <a href="#" class="link">=aadi2007singh@gmail.com</a>
        </div>
  
        <div class="box">
@@ -376,10 +376,7 @@
             United States</p>
        </div>
  
-    </div>
- 
-    <div class="credit"> created by <span>ninjashub</span> | all rights reserved! </div>
- 
+   
  </section>
 
 
