--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
  
        <div class="box">
           <h3>localization</h3>
-          <p>230 Point of the Pines Dr <br>
-            Colorado Springs <br>
+          <p>Mqueens house <br>
+            radiator  Springs <br>
             United States</p>
        </div>
  
